--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "liveemoji": "^2.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "prisma": "^6.2.1",
     "react": "^18.3.1",
@@ -38,6 +39,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
